--- a/ejercicios/08.md
+++ b/ejercicios/08.md
@@ -1,181 +1,146 @@
-# parámetros de ejecución en una aplicación Node.js
+# Bucles
 
-**_Node.js_** es el entorno de ejecución de JavaScript que estuvimos usando en el transcurso de este workshop para ejecutar nuestros programas.
-
-```javascript
-// `saludo.js`
-
-console.log('¡Hola Node.js!');
-```
+Cuando programamos es común que tengamos que repetir alguna tarea varias veces.
+Imagínense que queremos hacer un programa que salude a todos los invitados a una fiesta. Haríamos algo como:
 
 ```bash
-# En la terminal ejecutá el siguiente comando
-# Deberías ver '¡Hola Node.js!'
-node saludo.js
+saludar invitado 1
+saludar invitado 2
+saludar invitado 3
+saludar invitado 4
+// repetir muchas veces más...
+saludar invitado 120
 ```
 
-En este módulo vamos a aprender a trabajar con **_parámetros de ejecución_** en Node.js. Entre otras cosas, esto nos va a permitir empezar a escribir programas **_genéricos_**.
+Esto no parece ser una buena forma, tenemos que usar 120 líneas de código que dicen exactamente lo mismo.
 
-Vamos a explicar este tema en el contexto de un ejemplo: vamos a construir un programa genérico para sumar 2 números que el usuario que ejecute el programa decida cuales son.
+## While
 
-Siempre que estemos ejecutando un programa en el contexto de **_Node.js_**, tenemos a nuestra disposición un array que podemos obtener con `process.argv` que contiene los parámetros de ejecución de nuestro programa.
+Acá es donde aparece la sentencia `while` ("mientras" en castellano), que tiene más o menos el siguiente significado:
+
+`mientras se cumpla una condición, hacer algo.`
+
+o
+
+`while se cumpla una condición, hacer algo.`
+
+Algunos ejemplos podrían ser:
+
+`mientras (siga lloviendo), cerrar las puertas`
+
+`mientras (haya espacio en la bolsa), agregar pelotas`
+
+y esto en Javascript se escribe así:
+
+* While en Javascript:
+
+   ```javascript
+   while( /* Condicion */ ) {
+     //accion
+   }
+   ```
+
+Veamos un ejemplo con una cuenta regresiva que empieza con un contador en 100 y se va descontando de a 1 hasta llegar a 0 donde se corta el bucle.
+
+* Cuenta regresiva:
+
+  ```javascript
+  var contador = 100;
+
+  while (contador > 0) {
+    contador--;
+    console.log(contador);
+  }
+  ```
+
+El ciclo **se va a seguir ejecutando hasta que deje de cumplirse la condición** (en este caso `contador > 0`).
+
+¿Qué pasará si nunca deja de cumplirse la condición? Ojo... si lo probás, podés tildar tu navegador!
+
+## For
+
+Así como el while nos permite repetir alguna tarea varias veces, existe una forma de hacer esto con una sintaxis simplificada.
+
+Podemos poner el **contador**, la **condición** y el **incremento** (o decremento) del contador en una sola línea:
+
+* Sintaxis For
+
+  ```javascript
+  for(var contador = 100; contador > 0; contador--) {
+   console.log(contador);
+  }
+  ```
+
+que se podría traducir como:
+
+Dados un `contador`, una `condición` y un `incremento del contador`
+   hacé determinada `acción`
+
+En nuestro ejemplo sería:
+
+"Dado el `contador iniciado en 100` (**contador**), si el contador es `mayor a 0`  (**condición**), `restar 1 al contador` (**decremento**) y `mostrá al contador por la consola` (**acción**)."
+
+Parece algo críptico a primera vista, pero sólo estamos resumiendo las cosas:
+
+`var contador = 100`: estamos inicializando el contador que nos va indicar la posición en la que estamos
+
+`contador > 0`: es la condición para detener el for. Podemos usar cualquier otro tipo de condición. 
+No necesariamente debe ser por menor (<) o mayor (>). Puede ser igual (=), igual o menor (=<), etc.
+
+`contador--`: en cada iteración del for le resta uno al contador
+
+Así, tendremos exactamente el mismo resultado que con el `while.`
+
+## For en arreglos
+
+Algo muy muy común es recorrer los valores de un arreglo y para eso podemos utilizar al bucle for y la propiedad length. Lo que queremos lograr es que mientras queden elementos en el arreglo ir recorriendo (o iterando, palabra muy usada en la programación).
 
 ```javascript
-// `parametros.js`
-
-// Declaro y asigno una variable con los parámetros de ejecución de este programa
-var arrayDeParametrosDeEjecucion = process.argv;
-
-// Muestro por la terminal el array. Deberías ver algo parecido a esto:
-// [
-//   '/Users/crisduran/.nvm/versions/node/v6.3.1/bin/node',
-//   '/Users/crisduran/Documents/CDuran/javascript-101/parametros.js'
-// ]
-console.log(arrayDeParametrosDeEjecucion);
+var gustosHelado = ['Vainilla', 'Frutilla', 'Chocolate', 'Limón'];
+// mostramos los gustos de helado
+for(var i = 0; i < gustosHelado.length; i++){
+ console.log(gustosHelado[i]);
+}
 ```
 
-```bash
-# Ejecuto el programa que escribimos anteriormente en la terminal
-node parametros.js
-```
+Lo que estamos haciendo es recorrer todos los gustos y mostrándolos en pantalla.
+Repasemos parte por parte el código:
 
-Por defecto, todos los programas que se ejecutan en Node.js reciben en `process.argv` un `array` con 2 `string` indicando:
+`var i = 0;`: crea la variable que va a representar al índice
 
-1. Como primer valor (`process.argv[0]`) el path en tu disco duro donde se encuentra el ejecutable de Node.js.
-1. Como segundo valor (`process.argv[1]`) el path en tu disco duro donde se encuentra el archivo que estás ejecutando.
+`i < gustosHelado.length;`: es la condición. Si el índice es equivalente al largo del arreglo, deberá detenerse (recordemos que empieza en 0, así que el chequeo debe ser por < y no por <=) 
 
-> Esta información no nos resulta muy útil por el momento, pero tenemos que saber que existe para poder profundizar en el tema.
+`i++;`: en cada iteración le suma uno al índice para seguir recorriendo el arreglo.
 
-## process.argv y la historia de como empezamos a escribir programas genéricos
+## Bucles anidades
 
-El punto donde esto se pone bueno es cuando te cuento que si agregás valores al final del comando que usás para ejecutar tu programa, Node.js los va a agregar en el array `process.argv` y vos vas a poder usarlos para lo que necesites.
+Dijimos que los arreglos pueden contener cualquier cosa. Entonces pueden también contener a otro arreglo. Suena raro al principio, pero si lo podemos pensar como un grilla o matriz y ahí va a tener sentido. Por ejemplo, si queremos representar el tablero de un juego, un sudoku, claramente un arreglo no nos va a alcanzar, porque tiene 2 dimensiones.
+
+Necesitamos poder representar filas y columnas. Entonces podemos hacer un arreglo de arreglos.
 
 ```javascript
-// `hola.js`
-
-// Declaro y asigno una variable con el array de argumentos de ejecución
-var parametros = process.argv;
-
-// Declaro una variable `nombre` que va a tener como valor el tercer elemento
-// dentro del array de parámetros
-var nombre = parametros[2];
-
-// Muestro por la terminal un saludo
-console.log('Hola', nombre);
+var grillaNumeros = [
+   [ 1, 2, 3],
+   [4, 5, 6],
+   [7, 8, 9]
+]
 ```
 
-```bash
-# Hasta este módulo, veniamos ejecutando nuestros programas como `node archivo.js`
-# A partir de ahora, podemos pasar parámetros a nuestros programas!
-
-# Deberías ver 'Hola JavaScript'
-node hola.js JavaScript
-```
-
-Esto nos va a permitir empezar a escribir programas que no dependan de que nosotros como programadores tengamos escritos en el código los números que queremos sumar, o el nombre del usuario que queremos mostrar por la terminal. A partir de ahora, nuestro código va a operar con variables sin que conozcamos el valor que van a tener al momento de ejecución.
-
-Veamos un ejemplo más para intentar aclarar más esta idea:
+Para recorrerlo podemos usar bucles anidados que por cada fila *i* recorran todas las posiciones de la columna *j* correspondiente. Es decir, se recorre la grilla de arriba a abajo y de izquierda a derecha.
 
 ```javascript
-// `historia.js`
-
-// Declaro y asigno una variable con el valor del tercer elemento
-// dentro del array de argumentos de ejecución del programa
-var nombre1 = process.argv[2];
-
-// Hago lo mismo para el cuarto elemento
-var nombre2 = process.argv[3];
-
-// Muestro por la terminal los siguientes mensajes
-console.log('Este archivo ha recibido 2 nombres como parámetros de ejecución');
-console.log('El primero es', nombre1);
-console.log('El segundo es', nombre2);
+// Recorremos las filas de la grilla
+for(int i = 0; i < grillaNumeros.length; i++){
+  //recorremos las columnas de la grilla
+  for(int j = 0; j < grillaNumeros[i].length; j++){
+    console.log(grillaNumeros[i][j]);
+  }
+}
 ```
-
-```bash
-# Deberías ver:
-# 'Este archivo ha recibido 2 nombres como parámetros de ejecución'
-# El primero es Juan
-# El segundo es Pedro
-node historia.js Juan Pedro
-```
-
-## Trabajando con parámetros de tipo número
-
-En el caso particular de los números, necesitamos aprender un detalle extra. Node.js agrega en el array `process.argv` todos los parámetros de ejecución como string. Por este motivo, los números que nosotros enviemos como argumentos de ejecución los vamos a tener que convertir a tipo de dato numérico antes de operar con ellos mediante la función `Number`.
-
-> La función `Number` recibe como parámetro un string y devuelve el número que representa. Por ejemplo: `Number('20')` devuelve el número `20`.
-
-Veamos un ejemplo aplicado de todo:
-
-```javascript
-// `suma.js`
-
-// Declaro y asigno 2 variables con el contenido de los parámetros
-var numeroEnFormatoTexto1 = process.argv[2];
-var numeroEnFormatoTexto2 = process.argv[2];
-
-// Recordá que si usás el operador de suma (+) en 2 string, los mismos
-// se concatenan
-console.log('Los 2 números concatenados:', numeroEnFormatoTexto1 + numeroEnFormatoTexto1);
-
-// Declaro 2 variables que van a tener como valor el resultado de convertir
-// los parámetros de ejecución de string a número
-var numero1 = Number(numeroEnFormatoTexto1);
-var numero2 = Number(numeroEnFormatoTexto2);
-
-console.log('Los 2 números sumados:', numero1 + numero2);
-```
-
-```bash
-# Deberías ver en la consola los siguientes mensajes:
-# Los 2 números concatenados: 35
-# Los 2 números sumados: 8
-node suma.js 3 5
-```
-
-## Tips
-
-1. Podés usar la cantidad de parámetros que quieras a la hora de ejecutar tus programas.
-1. Si el valor que querés pasar contiene espacios, usá comillas para indicar que es un único valor, de lo contrario, la terminal va a creer que son muchos diferentes y los va a separar cuando cree el array `process.argv`.
-
-    Si queremos escribir un programa que reciba mi nombre completo y mi edad
-
-    ```bash
-    # Incorrecto
-    node mi-gran-programa.js Cristhian Javier Duran 27
-
-    # Correcto
-    node mi-gran-programa.js 'Cristhian Javier Duran' 27
-    ```
 
 ## Ejercicios
 
-1. Un año de vida para las personas, representa 7 años en la vida de un perro. Escribí un programa que reciba como parámetro tu edad (no te olvides de usar la función `Number` para convertirla de string a número) y mostrá por la terminal cuantos años tendrías si fueras un perro (tu edad multiplicada por 7).
-1. Escribí un programa que reciba el nombre de una persona (string) y la nota de su trabajo práctico (número). Mostrar por la terminal el mensaje adecuado dependiendo de las siguientes condiciones:
-
-    * Si su nota es mayor a 7, mostrar:
-
-    ```bash
-    # Completar los 3 puntos con los datos correspondientes
-    'El/La alumno/a llamado/a ... se sacó un ...'
-    'Felicitaciones por aprobar'
-    ```
-
-    * Si su nota es mayor a 4 pero menor a 7, mostrar:
-
-    ```bash
-    # Completar los 3 puntos con los datos correspondientes
-    'El/La alumno/a llamado/a ... se sacó un ...'
-    'La próxima entrega espero un mejor trabajo'
-    ```
-
-    * Si su nota es menor a 4, mostrar:
-
-    ```bash
-    # Completar los 3 puntos con los datos correspondientes
-    'El/La alumno/a llamado/a ... se sacó un ...'
-    'Nos vemos en Marzo'
-    ```
+1. Utilizar un bucle para recorrer los números del 1 al 40 mostrando por consola los únicamente los números pares.
+1. Escribir un bucle anidado que recorra un arreglo de arreglos mostrando sólo los números impares.
 
 [Respuestas](/respuestas/08.js)
